--- a/gemc/PlotShower.ipynb
+++ b/gemc/PlotShower.ipynb
@@ -2,31 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97420966",
+   "id": "a5900acd",
    "metadata": {},
    "source": [
-    "To produce the files needed to run this notebook:\n",
+    "This notebook demonstrates how to run GEMC, a Geant4-based Monte Carlo program for simulating detector response, on the output of Corsika, and plot the detector response in matplotlib.  I have provided an example file, 22_1000GeV.lund, which I have created in Corsika, and have placed in the directory condor/gemc, for use in this notebook.  \n",
     "\n",
-    "\n",
-    " clone the CONDOR git repository\n",
-    "git clone https://github.com/sebouh137/condor.git;\n",
-    "\n",
-    " Follow the instructions on how to install corsika from https://gitlab.iap.kit.edu/AirShowerPhysics/corsika/-/tree/master/  Or skip the all of the corsika stuff and just use the example file 22_1000GeV.lund which is already in the directory condor/gemc, and then continue from there.  \n",
-    "\n",
-    "\\# Copy the modified version of corsika.cpp from the folder condor/corsika/ into corsika-work.  This contains some changes to the executable,\n",
-    "including additional commandline arguments that were not previously present:\n",
-    "\n",
-    "cd corsika-work \n",
-    "make\n",
-    "\n",
-    "#note, you may have to modify these commands depending on where you installed corsika and the condor project.  \n",
-    "mkdir out\n",
-    "bin/corsika --energy 1000 --filename out/22_1000GeV --pdg 22 --nevent 10 --emcut 0.35 --hadcut 0.35\n",
-    "cd ~/condor/corsika\n",
-    "#convert the output file (parquet) from corsika to a format that can be used as input for GEMC (lund).  The elevation parameter is just 50 m above the nominal elevation of the detector.  \n",
+    "\\# You will need to convert this output file (parquet) from corsika to a format that can be used as input for GEMC (lund).  The elevation parameter is just 50 m above the nominal elevation of the detector.\n",
     "python parquet2lund.py --input ~/corsika-work/out/22_1000GeV/particles/particles.parquet --output ~/condor/gemc/22_1000GeV.lund --elevation 5350\n",
     "\n",
-    "\\# If you skipped the stuff with corsika and are just using the example lund file, continue here.  \n",
+    "\n",
+    "To install GEMC:  \n",
     " pull the docker image for gemc\n",
     "docker pull jeffersonlab/gemc:2.9\n",
     "\\# create a container with the docker image (replacing /path/to/condor with the absolute path of where you put the condor project)\n",
@@ -36,34 +21,51 @@
     "\n",
     "\\# Inside the container run the following commands\n",
     "\\# go to the appropriate folder:\n",
+    "\n",
     "cd /condor/gemc/\n",
+    "\n",
     "\\# generates the files describing the experiments' geometry, materials, and banks descriptions\n",
+    "\n",
     "perl condor.pl config.dat\n",
+    "\n",
     "\\# recompile gemc with the condor hitprocess:\n",
+    "\n",
     "./mod_and_recompile_gemc.sh\n",
     "\n",
     "\\# first run gemc on one of the LUND files from corsica, \n",
+    "\n",
     "gemc condor.gcard -USE_GUI=0 -INPUT_GEN_FILE=\"LUND,22_1000GeV.lund\" -OUTPUT=\"evio,22_1000GeV.ev\"\n",
+    "\n",
     "#convert the output file to ROOT\n",
+    "\n",
     "evio2root -INPUTF=\"22_1000GeV.ev\" -B=\"condor\" -R=\"condor\"\n",
     "\n",
     "\\# generate a file with muons that will be used in the MIP determination:\n",
+    "\n",
     "\\# The file muons.gcard gives the settings for running gemc with its internal generator.\n",
+    "\n",
     "gemc muons.gcard -USE_GUI=0; \n",
+    "\n",
     "\\# convert this file to root\n",
+    "\n",
     "evio2root -INPUTF=\"muon_test.ev\" -B=\"condor\" -R=\"condor\"\n",
     "\n",
     "\n",
-    "#Outside of the docker container, install the python package pylandau through pip (requires Python 3.10 or higher).  \n",
+    "\\#Outside of the docker container, install the python package pylandau through pip (requires Python 3.10 or higher).  \n",
+    "\n",
     "pip install pylandau\n",
     "\n",
-    "\\# Then you will have all the files you need for running this notebook"
+    "\\#Also install the python package for ROOT as well. \n",
+    "\n",
+    "pip install PyROOT\n",
+    "\n",
+    "\\# Then proceed with running this notebook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "25a20f31",
+   "id": "0ffbb3c2",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "50545e51",
+   "id": "e95a8dab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "6e79b222",
+   "id": "2f827eff",
    "metadata": {
     "scrolled": false
    },
@@ -225,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "b414fb5d",
+   "id": "f1bcefe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "abce6acc",
+   "id": "f191e46f",
    "metadata": {
     "scrolled": false
    },
@@ -373,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6939aebd",
+   "id": "7f9d083e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -381,7 +383,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -395,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
